# wgpu-tutorial-attempt

./: Cargo.toml  build.rs  rust-toolchain.toml
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: camera.rs  controller.rs  main.rs  model.rs  render.rs  texture.rs
